# QtScrcpy

./: .gitignore  CMakeLists.txt  QtScrcpy.pro  dark_teal.qss  dialog.cpp  dialog.h  dialog.ui  main.cpp  theme.qrc  vedioform.cpp  vedioform.h  vedioform.ui
adb/: adb.pri  adbprocess.cpp  adbprocess.h
common/: QScrcpyEvent.h  common.pri
decoder/: Decoder.cpp  Decoder.h  Frames.cpp  Frames.h  decoder.pri
enums/: ControlEventEnums.h  QScrcpyEventEnums.h  adb.pri  adbEnums.h  serverEnums.h
inputControl/: ControlEvent.cpp  ControlEvent.h  Controller.cpp  Controller.h  InputConvertBase.cpp  InputConvertBase.h  InputConvertGame.cpp  InputConvertGame.h  InputConvertNormal.cpp  InputConvertNormal.h
render/: QYUVOpenGLWidget.cpp  QYUVOpenGLWidget.h  render.pri
scopeGuard/: ScopeGuard.h  scopeGuard.pri
server/: DeviceSocket.cpp  DeviceSocket.h  Server.cpp  Server.h  TcpServer.cpp  TcpServer.h  adb.pri  server.pri
